--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
   },
   "homepage": "https://github.com/anusarati/perweb#readme",
   "dependencies": {
+    "@hapi/boom": "^9.1.0",
+    "@hapi/cookie": "^11.0.1",
     "@hapi/hapi": "^19.2.0",
     "@hapi/inert": "^6.0.1",
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
+    "hapi-pulse": "^3.0.0",
+    "joi": "^17.2.0",
     "monk": "^7.3.1"
   },
   "devDependencies": {
@@ -37,7 +42,7 @@
     "vue-router": "^3.3.4",
     "vue-template-compiler": "^2.6.11",
     "vuex": "^3.5.1",
-    "webpack": "^4.44.0",
+    "webpack": "^5.0.0-beta.26",
     "webpack-cli": "^3.3.12"
   }
 }
