--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "perweb",
+  "name": "liblogx",
   "version": "1.0.0",
-  "description": "personal website",
+  "description": "personal blog",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
