--- a/package.json
+++ b/package.json
@@ -23,26 +23,26 @@
     "@hapi/hapi": "^19.2.0",
     "@hapi/inert": "^6.0.1",
     "bcrypt": "^5.0.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^4.2.1",
     "dotenv": "^8.2.0",
+    "file-loader": "^6.0.0",
     "hapi-pulse": "^3.0.0",
+    "html-loader": "^1.2.1",
+    "html-webpack-plugin": "^4.3.0",
     "joi": "^17.2.0",
-    "monk": "^7.3.1"
+    "markdown-loader": "^5.1.0",
+    "monk": "^7.3.1",
+    "rate-limiter-flexible": "^2.1.10",
+    "sanitize-html": "^1.27.3",
+    "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^5.0.0-beta.28"
   },
   "devDependencies": {
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^4.1.1",
-    "favicons-webpack-plugin": "^4.2.0",
-    "file-loader": "^6.0.0",
-    "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.3.0",
-    "markdown-loader": "^5.1.0",
-    "sanitize-html": "^1.27.2",
-    "vue": "^2.6.11",
-    "vue-loader": "^15.9.3",
+    "vue": "^2.6.12",
     "vue-router": "^3.3.4",
-    "vue-template-compiler": "^2.6.11",
     "vuex": "^3.5.1",
-    "webpack": "^5.0.0-beta.26",
     "webpack-cli": "^3.3.12"
   }
 }
