--- a/package.json
+++ b/package.json
@@ -34,14 +34,16 @@
     "monk": "^7.3.1",
     "rate-limiter-flexible": "^2.1.10",
     "sanitize-html": "^1.27.3",
+    "vue": "^2.6.12",
+    "vue-i18n": "^8.21.0",
     "vue-loader": "^15.9.3",
+    "vue-router": "^3.4.3",
     "vue-template-compiler": "^2.6.12",
+    "vuex": "^3.5.1",
     "webpack": "^5.0.0-beta.28"
   },
-  "devDependencies": {
-    "vue": "^2.6.12",
-    "vue-router": "^3.4.3",
-    "vuex": "^3.5.1",
+  "devDependencies": {},
+  "optionalDependencies": {
     "webpack-cli": "^3.3.12"
   }
 }
