--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "setup": "npm i && mkdir posts images && node mongosetup.js",
     "start": "node server.js"
   },
   "repository": {
@@ -11,7 +12,7 @@
     "url": "git+https://github.com/anusarati/liblogx.git"
   },
   "author": "Xingzhe Li",
-  "license": "MIT",
+  "license": "0BSD",
   "bugs": {
     "url": "https://github.com/anusarati/liblogx/issues"
   },
